# BlackJackGame

./: pyproject.toml  recur.py
database/: database.py
src/: cards.json  constants.json  constants.py  data.json  data.txt  main.py  models.py
src/templates/: board.html  form.html
